Bug 92499 - Start Center GUI for the Templates button dropdown needs alignment and proper styling
Summary: Start Center GUI for the Templates button dropdown needs alignment and proper...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords:
: 96073 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2015-07-02 14:28 UTC by steve
Modified: 2022-09-23 14:49 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
inconsistent navigation in startcenter (110.16 KB, image/jpeg)
2015-07-02 14:28 UTC, steve
Details
verified (47.23 KB, image/png)
2022-09-23 14:49 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2015-07-02 14:28:43 UTC
Created attachment 116998 [details]
inconsistent navigation in startcenter

Expected: all navigation should be done inside the startcenter without opening additional dialogues except for "open with".

Currently: templates has a triangle, which opens a submenu with the exact items the user would get when clicking the template button.

Suggestion: let's make the startcenter nice to use, avoid clutter and create consistency. thus I suggest removing that option form the template button and making it just a simple button as the other items in the startcenter are.

explanatory screenshot attached.
Comment 1 V Stuart Foote 2015-07-02 14:48:32 UTC
Providing StartCenter filtering of template type to Open a template to create a new documents was the goal.  Filtering from a dropdown was a lot better than a tabbed representation on the StartCenter. 

Also, you'd still need a method to access the Edit templates dialog.

IMHO the dropdown menu widget remains the most efficient way to implement use of template filtering.
Comment 2 Cor Nouws 2015-07-02 15:16:42 UTC
One suggestion on the drop down: on my Ubuntu Unity 32bits, the list is aligned at the left side of the word Templates. Better would be aligned left or right with the drop down arrow, IMO.
Comment 3 V Stuart Foote 2015-08-01 12:43:08 UTC
As Cor suggests simple adjustment here is that the drop down needs to be aligned inboard of the frame edge.  But there are several of these tweaks dealing with the Templates button

bug 87697
bug 89103
Comment 4 tommy27 2015-11-01 18:20:21 UTC
+1 to align the menu to the right just below the triangle.

actually when you click it you have to move mouse downs to the left whilst the expected behavior should be to move straight down
Comment 5 steve 2015-11-02 21:10:45 UTC
2 cents incoming: I still do not understand why editing templates needs to be part of the start center. editing templates is an expert option and the start center is there to get users started which means they should be able to select and find templates (and not edit them - at least not from the start center).

So I stick to my initial suggestion to fully remove that odd option which doesn't fit/comply with the rest of the start center navigation style. A dropdown is not expected and looks and feels alienated.

The sorting of templates should be properly done in the template view. no further layer of navigation is required.
Comment 6 Cor Nouws 2015-11-25 20:24:36 UTC
*** Bug 96073 has been marked as a duplicate of this bug. ***
Comment 7 Robinson Tryon (qubit) 2016-08-25 05:39:27 UTC Comment hidden (obsolete)
Comment 8 Heiko Tietze 2017-12-18 10:15:59 UTC
Looks like there is agreement on right-aligning the context menu. Removing needsUX.
Comment 9 QA Administrators 2018-12-19 03:51:21 UTC Comment hidden (obsolete)
Comment 10 sdc.blanco 2020-11-06 16:15:13 UTC
Confirming that Drop-down box (context menu) for template in Start Center is not right-justified (as decided in comment 8).  

Maybe EasyHack?

Version: 7.1.0.0.alpha1+ (x64)
Build ID: a4d4ed86991e2901ac86189e95966d4e99be4944
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: da-DK (en_DK); UI: en-US
Calc: threaded
Comment 11 Heiko Tietze 2022-09-07 11:45:07 UTC
(In reply to steve from comment #5)
> 2 cents incoming: I still do not understand why editing templates needs to
> be part of the start center...
Recent Documents also has a context menu but here with the only function to clear. In case of templates you can filter the various modules and run the manager. So while I can follow your idea to keep the left pane as simple as possible the interaction is actually some context dependent functionality.

Nevertheless I vote for removing the contextual function at this position and have it at the right content area.
Comment 12 V Stuart Foote 2022-09-07 14:50:17 UTC
(In reply to Heiko Tietze from comment #11)
> 
> Nevertheless I vote for removing the contextual function at this position
> and have it at the right content area.

Heiko, why pull a seven year old comment back into focus. Including the Elements on the StartCenter discussion is done. That was not even the issue of this BZ ticket. 

The split button drop list action of Recent Documents and Templates remains an efficient framework to filter the thumbnail views that either SC mode exposes.  The alternatives of placing those filters onto the backing window "content panel" got tossed.  And the appropriate controls/representation of each "thumbnail view" have been tweaked over the years/releases.
Comment 13 Heiko Tietze 2022-09-07 15:08:49 UTC
(In reply to V Stuart Foote from comment #12)
> Heiko, why pull a seven year old comment back into focus.
Only seven years, that's nothing ;-)
In fact it is on my list of interesting patches.

> The split button drop list action of Recent Documents and Templates remains
> an efficient framework to filter the thumbnail views...
If it was so efficient we wouldn't have this ticket. Point is that you filter the content not anything on the left pane. Likewise Open and Edit. One starts with the left MB on the left pane the other via right MB on the actual item.
And thinking a bit ahead some kind of Sort By function needs to be in such a context menu too. 

While playing with the code I also realized that these buttons never toggle.
Comment 14 V Stuart Foote 2022-09-07 15:32:01 UTC
(In reply to Heiko Tietze from comment #13)
> (In reply to V Stuart Foote from comment #12)
> > Heiko, why pull a seven year old comment back into focus.
> Only seven years, that's nothing ;-)
> In fact it is on my list of interesting patches.
> 
> > The split button drop list action of Recent Documents and Templates remains
> > an efficient framework to filter the thumbnail views...
> If it was so efficient we wouldn't have this ticket. Point is that you
> filter the content not anything on the left pane. Likewise Open and Edit.
> One starts with the left MB on the left pane the other via right MB on the
> actual item.
> And thinking a bit ahead some kind of Sort By function needs to be in such a
> context menu too. 
> 
> While playing with the code I also realized that these buttons never toggle.

This BZ issue got recast to an alignment issue--the OP should have been obsoleted or the summary adjusted when the alignment issue was corrected (it is). 

So, go back and look at the Design meeting discussions and mock-ups--tracked in bug 61914 --as we brought the thumbnail views of the template manager into the StartCenter and then implemented thumbnails for the MRU history. 

IMHO the original OP is a clear => WF, and in fact we have bug 80934 to do the same MRU filtering by document module as provided now for Templates.
Comment 15 Heiko Tietze 2022-09-08 07:13:18 UTC
(In reply to V Stuart Foote from comment #14)
> IMHO the original OP is a clear => WF, and in fact we have bug 80934...

Once 80934 is implemented the context menus are obsolete. I'm trying to do both.
Comment 16 steve 2022-09-08 11:13:34 UTC
Context: When I filed this issue in 2015 I was unhappy with the way the dropdown for Templates was shown. Breaking the connection to the area users *have to* click for the menu to open is bad UX.

Solution 1: align the dropdown option on the right side.

Solution 2: move filters and manage templates options into the right-side template view. That would allow to get rid of the dropdown for templates and maybe that would be more intuitive for users. The UX could be show all templates by default and then have the component icons at the top. Clicking any component icon would then only show the matching templates. This would be more intuitive and require no additional clicks. Manage templates could be a simply cogwheel icon next to the components.

I don't see how this bug here would be worksfor me in current release.
Comment 17 Heiko Tietze 2022-09-16 08:32:36 UTC
Solved via bug 80934 - the buttons just toggle now and the menu went to the right pane.
Comment 18 Adolfo Jayme Barrientos 2022-09-17 19:35:58 UTC
The commit solving it is 164a1f4c3315fc44161128d3d9ca886f767f7d30
Comment 19 steve 2022-09-23 14:49:36 UTC
Created attachment 182646 [details]
verified

verified
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 9940a5dce79fe9dc3e6ff0302c9be8c7d1648f67
CPU threads: 8; OS: Mac OS X 12.6; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded