tdf#92499 Start Center: Right align button dropdowns

Change-Id: Ic56119d5b175ebf9a0df5915a69510fd6e8e696b