vcl/source/control/menubtn.cxx
@@ -52,12 +52,13 @@ void MenuButton::ExecuteMenu()
 
     if ( mpMenu )
     {
-        Point aPos( 0, 1 );
+        int nPaddingRight = 15;
         Size aSize = GetSizePixel();
+        Point aPos (aSize.Width() - nPaddingRight, aSize.Height());
         Rectangle aRect( aPos, aSize );
         SetPressed( true );
         EndSelection();
-        mnCurItemId = mpMenu->Execute( this, aRect, PopupMenuFlags::ExecuteDown );
+        mnCurItemId = mpMenu->Execute( this, aRect, PopupMenuFlags::ExecuteLeft );
         SetPressed( false );
         if ( mnCurItemId )
         {
